2009-02-06  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_global.d (gc_suspend_all_threads): hold the threads lock while
	all threads are suspended. prevents race condition between
	delete_thread() and GC (allthreads[] is changed by delete_thread()
	while GC may use it)
	(gc_resume_all_threads): release the threads lock acquired by
	gc_suspend_all_threads()
	* spvw.d (delete_thread): do not destroy twice _gc_suspend_lock

2009-02-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_genera1.d (build_old_generation_cache) [MULTITHREAD]: fix
	page protection when multiple "writeable" (PROT_READ_WRITE) pinned
	objects share the same physical memory page

2009-02-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_global.d: comments
	(suspend_thread): release heap lock only if it was acquired by us
	(resume_thread): acquire heap lock only if not already owned
	* lispbibl.d: comments

2009-02-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (fill_relocation_memory_regions) [MULTITHREAD]: fix
	corner case: multiple times pinned object at the start of the heap

2009-02-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_genera1.d (build_old_generation_cache) [MULTITHREAD]: fix
	page protection when multiple heap areas should be left with
	PROT_READ_WRITE

2009-02-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d [MULTITHREAD]: export to clisp.h only the types
	(PERFORM_GC) [MULTITHREAD]: set the valid stack range of current
	thread in debug builds
	* xthread.d (testandset) [MIPS]: fix the macro argument

2009-02-04  Vladimir Tzankov  <vtzankov@gmail.com>

	export low-level threads internals to clisp.h
	* xthread.d: convert all functions to macros in order to export them to
	clisp.h. POSIX mutexes code cleanup
	* spvw.d (recursive_mutexattr): always defined in POSIX_THREADS
	* lispbibl.d: export to clisp.h required low-level threads macros. do
	not include xthread.c from clisp.h
	* makemake.in (LINKKIT): revert last commit
